# cookiecutter-pypackage

./: .editorconfig  .flake8  404.html  LICENSE  README.md  cookiecutter.json  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code_quality_checks.yml
advanced/feature_explanation/: index.html
docs/: index.md
docs/advanced/: feature_explanation.md
docs/getting-started/: configure_github_repo.md  connect_to_remote_repo.md  create_local_project.md  publish_to_pypi.md  publish_to_test_pypi.md
getting-started/configure_github_repo/: index.html
getting-started/connect_to_remote_repo/: index.html
getting-started/create_local_project/: index.html
getting-started/publish_to_pypi/: index.html
getting-started/publish_to_test_pypi/: index.html
hooks/: __init__.py  post_gen_project.py  pre_gen_project.py
search/: search_index.json
tests/: test_project_creation.py
{{cookiecutter.project_slug}}/: .flake8  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  mypy.ini  poetry.toml  pyproject.toml  yamllint-config.yml
{{cookiecutter.project_slug}}/.github/workflows/: code_quality_checks.yml  docs_publish.yml  pypi_publish.yml  test_pypi_publish.yml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
