[tool.black]
line-length=100

[tool.poetry]
name = "cookiecutter-pypackage"
version = "0.0.0"
description = "Cookiecutter to create a Python package. Powered by Poetry, GitHub actions, and MkDocs-Material."
authors = ["Marco Gancitano <marco.gancitano97@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/mgancita/cookiecutter-pypackage"
repository = "https://github.com/mgancita/cookiecutter-pypackage"
keywords = ["cookiecutter", "packaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.0"
pytest-cov = "^2.10.0"
pytest-cookies = "^0.5.0"
invoke = "^1.4.0"
pydocstyle = "5.0.0"
flake8 = "3.8.4"
flake8-docstrings = "1.5.0"
flake8-import-order = "0.18.1"
pep8-naming = "0.11.0"
flake8-colors = "0.1.6"
pyflakes = "2.2.0"
pep8 = "1.7.1"
mypy = "0.790"
black = "20.8b1"
cookiecutter = "^1.7.0"
mkdocs-material = "^6.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
