{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[tool]

{%- if cookiecutter.use_black %}
[tool.black]
line-length=100
{%- endif %}

{%- if cookiecutter.use_pylint %}
[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"
{%- endif %}

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug.replace('_', '-') }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
readme = "README.md"
{%- if cookiecutter.open_source_license in license_classifiers %}
license =  "{{ cookiecutter.open_source_license }}"
{%- endif %}
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
include = [
    {%- if cookiecutter.open_source_license in license_classifiers %}
    "LICENSE",
    {%- endif %}
    {%- if cookiecutter.use_mypy %}
    "{{ cookiecutter.project_slug }}/py.typed"
    {%- endif %}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.0"
mkdocs-material = "^6.1.5"
{% if cookiecutter.use_pytest == 'y' -%}
pytest = "^6.0"{% endif %}
{% if cookiecutter.use_flake8 == 'y' -%}
flake8 = "^3.8.4"{% endif %}
{% if cookiecutter.use_pylint == 'y' -%}
pylint = "^2.6.0"{% endif %}
{% if cookiecutter.use_black == 'y' -%}
black = "20.8b1"{% endif %}
{% if cookiecutter.use_mypy == 'y' -%}
mypy = "0.790"{% endif %}
{% if cookiecutter.use_yamllint == "y" -%}
yamllint = "^1.25.0"{% endif %}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
